# Labs_c-plus-plus

./: 1.txt  2.txt  README.md
A1/: circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
A2/: CMakeLists.txt  base-types.hpp  circle.cpp  rectangle.cpp
A4/: CMakeLists.txt  circle.cpp  circle.hpp  composite-shape.cpp  composite-shape.hpp  main.cpp  matrix.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  stratification.cpp  stratification.hpp  test-circle.cpp  test-composite-shape.cpp  test-matrix.cpp  test-rectangle.cpp  test-stratification.cpp  test-triangle.cpp  triangle.cpp  triangle.hpp
B1/: CMakeLists.txt  access.hpp  functions.cpp  functions.hpp  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  tasks.hpp
B2/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp  queue-implementation.hpp  queue-interface.hpp  task1.cpp  task2.cpp  tasks.hpp
B3/: CMakeLists.txt  factorial.cpp  factorial.hpp  interface.cpp  interface.hpp  main.cpp  phone-book.cpp  phone-book.hpp  task1.cpp  task2.cpp  tasks.hpp
B4/: CMakeLists.txt  dataStruct.hpp  functions.cpp  functions.hpp  main.cpp
