cmake_minimum_required(VERSION 3.13)
project(B3)

set(CMAKE_CXX_STANDARD 14)

add_executable(B3
        main.cpp
        factorial.cpp
        factorial.hpp
        interface.cpp
        interface.hpp
        phone-book.cpp
        phone-book.hpp
        tasks.hpp
        task1.cpp
        task2.cpp
        )